# sfox-svn

branches/leserpent/sfox/src/utils/: Makefile.am
tags/start/sfox/: ChangeLog  configure.in  updatemakefile
tags/start/sfox/src/game/: starmain.c
trunk/GLstats/: CMakeLists.txt  Makefile.in  aclocal.m4  bootstrap  configure  configure.ac
trunk/GLstats/docs/: Doxyfile
trunk/GLstats/src/: BasicException.h  CMakeLists.txt  Counter.h  CounterManager.cxx  CounterManager.h  GLContext.cxx  GLContext.h  GLFuncs.cxx  GLFuncs.h  GLStatConfig.cxx  GLStatConfig.h  GLState.h  GLXFuncs.cxx  GLXFuncs.h  Global.cxx  Global.h  GlobalGLStat.cxx  GlobalGLStat.h  LibraryLoader.cxx  LibraryLoader.h  Logger.h  LoggerManager.cxx  LoggerManager.h  LoggerXml.cxx  LoggerXml.h  Makefile.am  Makefile.in  ProxyFunction.cxx  ProxyFunction.h  Singleton.h  UIFrame.cxx  UIFrame.h  UIFramedWindow.cxx  UIFramedWindow.h  UILoggerDisplay.cxx  UILoggerDisplay.h  UIObject.h  UIWindow.cxx  UIWindow.h  font.cxx  (+10 more)
trunk/frameworkedGL/: SConstruct  mkpatchu
trunk/frameworkedGL/VSNet/: frameworkedGL.ncb  frameworkedGL.sln
trunk/frameworkedGL/VSNet/clipmap/: clipmap.vcproj
trunk/frameworkedGL/VSNet/frameworkGL/: ReadMe.txt  frameworkGL.vcproj
trunk/frameworkedGL/VSNet/perpixellight/: perpixellight.vcproj
trunk/frameworkedGL/VSNet/reflection/: reflection.vcproj
trunk/frameworkedGL/VSNet/testBatch/: testBatch.vcproj
trunk/frameworkedGL/VSNet/testCG/: testCG.vcproj
trunk/frameworkedGL/VSNet/testTexture/: testTexture.vcproj
trunk/frameworkedGL/VSNet/volrend/: volrend.vcproj
trunk/frameworkedGL/VSNet/volrendCG/: volrendCG.vcproj
trunk/frameworkedGL/VSNet/volumeCG/: volumeCG.vcproj
trunk/frameworkedGL/VSNet/volumeGLSL/: volumeGLSL.vcproj
trunk/frameworkedGL/admin/: cg.py  freetype.py  generic.py  opengl.py  sdl.py  sdl_image.py
trunk/frameworkedGL/common/shaders/testCG/: simple_frag.cg  simple_vert.cg
trunk/frameworkedGL/framework/: SConscript  SConstruct
trunk/frameworkedGL/framework/src/: .sconsign  Doxyfile  SConscript  starengine.h
trunk/frameworkedGL/framework/src/framework/: .sconsign  application.cpp  application.h  exception.h  timer.cpp  timer.h
trunk/frameworkedGL/framework/src/glew/: Makefile
trunk/frameworkedGL/framework/src/math/: .sconsign  matrix.h  quaternion.h  utils.h  vector2.h  vector3.h
trunk/frameworkedGL/framework/src/opengl/: .sconsign  Makefile.in  camera.cpp  camera.h  effectCG.cpp  effectCG.h  fbo.cpp  fbo.h  font.cpp  font.h  geometricbatch.cpp  geometricbatch.h  glext.cpp  glext.h  image.cpp  image.h  imageloader.cpp  (+45 more)
trunk/frameworkedGL/pbuffer/src/: .emacs.desktop  .sconsign  SConscript  testapp.cpp
trunk/frameworkedGL/perpixellight/src/: .emacs.desktop  .sconsign  SConscript  light  testapp.cpp
trunk/frameworkedGL/reflection/: SConstruct
trunk/frameworkedGL/reflection/src/: .emacs.desktop  .sconsign  testapp.cpp  testapp.h
trunk/frameworkedGL/reflection/win32/: win32.vcproj
trunk/frameworkedGL/testBatch/src/: testapp.cpp  testapp.h
trunk/frameworkedGL/testCG/src/: testapp.cpp  testapp.h
trunk/frameworkedGL/testTexture/src/: SConscript  testapp.cpp
trunk/frameworkedGL/tests/: SConstruct
trunk/frameworkedGL/tests/perpixellight/: SConstruct
trunk/frameworkedGL/tests/volumeCG/: SConscript
trunk/frameworkedGL/tools/mknormalmap/: mknormalmap.py
trunk/frameworkedGL/volrend/src/: testapp.cpp  testapp.h
trunk/frameworkedGL/volrendCG/src/: SConscript  main.cpp  testapp.cpp  testapp.h
trunk/frameworkedGL/ztest/: .emacs.desktop
trunk/frameworkedGL/ztest/src/: .sconsign  SConscript  SConscript.bak  main.cpp  pbdemo.c  testapp.h
trunk/myemacs/: .emacs
trunk/myemacs/.emacs.d/: ccext.elc  cxx-tools.el  history  nasm-mode.elc
trunk/myemacs/.emacs.d/ilisp/: .INSTALLATION.swp  bridge.elc  comint-ipc.elc  completer.elc  ilcompat.elc  ild.elc  ilfsf18.elc  ilisp-all.elc  ilisp-imenu.elc  ilisp-mnb.elc  ilisp-scheme-easy-menu.elc  ilisp.elc
trunk/myemacs/.emacs.d/kde-emacs/: dirvars.elc  kde-emacs-bindings.el  kde-emacs-vars.elc  klaralv.elc
trunk/sfox/: BUGS  ChangeLog  TODO  configure.in  cross-configure.sh
trunk/sfox/src/: Makefile.am
trunk/sfox/src/game/: Makefile.am  starmain.c
trunk/sfox/src/starengine/: Makefile.am
trunk/sfox/src/starengine/engine/: Makefile.am  bbox.c  bbox.h  camera.c  camera.h  color.h  dds.c  engine.h  fontgl.c  frustum.c  frustum.h  heightfield.c  heightfield.h  heightfieldinfo.c  heightfieldinfo.h  line.c  line.h  material.c  material.h  object2d.c  object2d.h  object3d.c  object3d.h  object_factory.c  object_factory.h  plan.c  plan.h  quadtree.c  quadtree.h  scene.c  scene.h  skybox.c  skybox.h  starengine.c  starengine.h  texture.c  texture.h  utility.c  utility.h  vertex.c  (+5 more)
trunk/sfox/src/starengine/engine/opengl/: stargl.h  starglaux.h  starglu.h
trunk/sfox/src/starengine/framework/: Makefile.am  display.c  display.h  framework.c  framework.h  keyboard.c  keyboard.h  mouse.c  mouse.h
trunk/sfox/src/starengine/math/: mathmacro.h  matrix.c  matrix.h  quaternion.c  quaternion.h  vector3.c  vector3.h
trunk/sfox/src/starengine/starutils/: Makefile.am  stararray.c  stararray.h  starlist.c  starlist.h  starutils.h
trunk/sfox/src/utils/raw2png/: Makefile.am  raw2png.c
trunk/various/reflection/: Makefile.am  bootstrap  configure.in  cross-make.sh  mkpatchu
trunk/various/reflection/src/: Makefile.am  testapp.cpp  testapp.h
trunk/various/reflection/src/data/: sphere.scn
trunk/various/reflection/src/framework/: Makefile.am  application.h  fontglold.c  timer.cpp  timer.h
trunk/various/reflection/src/math/: utils.h
trunk/various/reflection/src/opengl/: Makefile.am  camera.cpp  camera.h  font.cpp  glext.cpp  glext.cpp.old  glext.h  glext.h.old  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  object3d.cpp  object3d.h  program.cpp  program.h  renderer.cpp  shader.cpp  shader.h  texture.cpp  texture.h  vertexbuffer.cpp  vertexbuffer.h
trunk/various/reflection/src/opengl/mkexts/: exts.list  mkexts.pl  template.cpp
trunk/various/reflection/src/shaders/: basic.frag  phong.vert
(+179 files in other folders)
