PROJECT(GLStats)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")

SUBDIRS(src/)

# OpenGL
INCLUDE(${CMAKE_ROOT}/Modules/FindOpenGL.cmake)
INCLUDE(FindOpenGL)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
LINK_LIBRARIES(${OPENGL_LIBRARY})

# look for the freetype library
SET(FREETYPE_DIR ${CMAKE_MODULE_PATH})
FIND_PACKAGE(FREETYPE REQUIRED)
SET(CXXFLAGS "${LIBFREETYPE_CFLAGS}")

INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIR})
LINK_LIBRARIES(${FREETYPE_LIBRARIES})
